Codigo Atualizado