@@ -2,12 +2,10 @@ package br.com.techamv;
 
 import br.com.techamv.modelo.*;
 import br.com.techamv.modelo.usuario.*;
-import br.com.techamv.repositorio.DadosIniciais;
 
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class SistemaTechAMV {
 
@@ -22,7 +20,7 @@ public class SistemaTechAMV {
     private static final DateTimeFormatter formatadorData = DateTimeFormatter.ofPattern("dd/MM/yyyy HH:mm");
 
     public static void main(String[] args) {
-        DadosIniciais.carregar(usuarios, produtos, clientes, fornecedores);
+        inicializarDados();
 
         while (true) {
             System.out.println("\n===== SISTEMA DE GERENCIAMENTO TECHAMV =====");
@@ -35,12 +33,12 @@ public class SistemaTechAMV {
             }
             System.out.print("Senha: ");
             String senha = scanner.nextLine();
+            
+            Usuario usuarioLogado = autenticarUsuario(email, senha);
 
-            Optional<Usuario> usuarioOpt = autenticarUsuario(email, senha);
-
-            if (usuarioOpt.isPresent()) {
-                System.out.println("\nLogin bem-sucedido! Bem-vindo(a), " + usuarioOpt.get().getNome());
-                direcionarParaMenu(usuarioOpt.get());
+            if (usuarioLogado != null) {
+                System.out.println("\nLogin bem-sucedido! Bem-vindo(a), " + usuarioLogado.getNome());
+                direcionarParaMenu(usuarioLogado);
             } else {
                 System.out.println("Credenciais ou status de usuário inválido.");
             }
@@ -49,12 +47,13 @@ public class SistemaTechAMV {
         scanner.close();
     }
 
-    // O restante do código permanece exatamente o mesmo
-    
-    private static Optional<Usuario> autenticarUsuario(String email, String senha) {
-        return usuarios.stream()
-                .filter(u -> u.getEmail().equalsIgnoreCase(email) && u.getSenha().equals(senha) && u.isAtivo())
-                .findFirst();
+    private static Usuario autenticarUsuario(String email, String senha) {
+        for (Usuario u : usuarios) {
+            if (u.getEmail().equalsIgnoreCase(email) && u.getSenha().equals(senha) && u.isAtivo()) {
+                return u;
+            }
+        }
+        return null;
     }
 
     private static void direcionarParaMenu(Usuario usuario) {
@@ -66,7 +65,7 @@ public class SistemaTechAMV {
             exibirMenuEstoquista((Estoquista) usuario);
         }
     }
-
+    
     private static void exibirMenuGerente(Gerente gerente) {
         int opcao = 0;
         while (opcao != 9) {
@@ -110,7 +109,7 @@ public class SistemaTechAMV {
             }
         }
     }
-
+    
     private static void exibirMenuEstoquista(Estoquista estoquista) {
         int opcao = 0;
         while (opcao != 9) {
@@ -153,7 +152,7 @@ public class SistemaTechAMV {
             }
         }
     }
-
+    
     private static void menuGestaoClientes() {
         int opcao = 0;
         while (opcao != 9) {
@@ -189,6 +188,42 @@ public class SistemaTechAMV {
             }
         }
     }
+    
+    private static Produto encontrarProdutoPorId(int id) {
+        for (Produto p : produtos) {
+            if (p.getIdProduto() == id) {
+                return p;
+            }
+        }
+        return null;
+    }
+    
+    private static Usuario encontrarUsuarioPorId(int id) {
+        for (Usuario u : usuarios) {
+            if (u.getIdUsuario() == id) {
+                return u;
+            }
+        }
+        return null;
+    }
+    
+    private static Cliente encontrarClientePorId(int id) {
+        for (Cliente c : clientes) {
+            if (c.getIdCliente() == id) {
+                return c;
+            }
+        }
+        return null;
+    }
+    
+    private static Fornecedor encontrarFornecedorPorId(int id) {
+        for (Fornecedor f : fornecedores) {
+            if (f.getIdFornecedor() == id) {
+                return f;
+            }
+        }
+        return null;
+    }
 
     private static void registrarVenda(Vendedor vendedor) {
         System.out.println("\n--- REGISTRO DE VENDA ---");
@@ -198,18 +233,20 @@ public class SistemaTechAMV {
             System.out.print("Digite o ID do produto (ou 0 para finalizar): ");
             int id = lerOpcao();
             if (id == 0) break;
+            
+            Produto produto = encontrarProdutoPorId(id);
 
-            Optional<Produto> produtoOpt = produtos.stream().filter(p -> p.getIdProduto() == id).findFirst();
-            if (produtoOpt.isEmpty()) {
+            if (produto == null) {
                 System.out.println("Produto não encontrado.");
                 continue;
             }
-            Produto produto = produtoOpt.get();
             
-            int quantidadeJaNoCarrinho = itens.stream()
-                .filter(item -> item.getProduto().equals(produto))
-                .mapToInt(ItemVenda::getQuantidade)
-                .sum();
+            int quantidadeJaNoCarrinho = 0;
+            for(ItemVenda item : itens) {
+                if (item.getProduto().equals(produto)) {
+                    quantidadeJaNoCarrinho += item.getQuantidade();
+                }
+            }
 
             int estoqueDisponivelParaVenda = produto.getEstoque().getQuantidade() - quantidadeJaNoCarrinho;
 
@@ -219,7 +256,7 @@ public class SistemaTechAMV {
             
             if (qtd <= 0) {
                 System.out.println("Quantidade inválida.");
-            } else if (estoqueDisponivelParaVenda < qtd) { // A verificação agora usa o estoque disponível calculado
+            } else if (estoqueDisponivelParaVenda < qtd) {
                 System.out.println("Venda bloqueada: estoque insuficiente.");
             } else {
                 itens.add(new ItemVenda(produto, qtd));
@@ -238,16 +275,16 @@ public class SistemaTechAMV {
             listarClientes();
             System.out.print("Digite o ID do cliente: ");
             int idCliente = lerOpcao();
-            clienteAssociado = clientes.stream()
-                    .filter(c -> c.getIdCliente() == idCliente)
-                    .findFirst()
-                    .orElse(null);
+            clienteAssociado = encontrarClientePorId(idCliente);
             if (clienteAssociado == null) {
                 System.out.println("Cliente não encontrado. Venda seguirá sem cliente associado.");
             }
         }
 
-        itens.forEach(item -> item.getProduto().getEstoque().remover(item.getQuantidade()));
+        for (ItemVenda item : itens) {
+            item.getProduto().getEstoque().remover(item.getQuantidade());
+        }
+        
         Venda v = new Venda(vendedor, clienteAssociado, itens);
         vendas.add(v);
 
@@ -259,7 +296,9 @@ public class SistemaTechAMV {
 
     private static void consultarEstoque() {
         System.out.println("\n--- ESTOQUE ATUAL ---");
-        produtos.forEach(p -> System.out.printf("ID %d - %s | Preço: R$ %.2f | Qtd: %d\n", p.getIdProduto(), p.getNome(), p.getPreco(), p.getEstoque().getQuantidade()));
+        for (Produto p : produtos) {
+            System.out.printf("ID %d - %s | Preço: R$ %.2f | Qtd: %d\n", p.getIdProduto(), p.getNome(), p.getPreco(), p.getEstoque().getQuantidade());
+        }
     }
 
     private static void registrarEntradaEstoque(Estoquista estoquista) {
@@ -267,8 +306,9 @@ public class SistemaTechAMV {
         consultarEstoque();
         System.out.print("Digite o ID do produto que receberá entrada: ");
         int id = lerOpcao();
-        Optional<Produto> produtoOpt = produtos.stream().filter(p -> p.getIdProduto() == id).findFirst();
-        if (produtoOpt.isEmpty()) {
+        Produto produto = encontrarProdutoPorId(id);
+        
+        if (produto == null) {
             System.out.println("Produto não encontrado.");
             return;
         }
@@ -283,14 +323,15 @@ public class SistemaTechAMV {
         listarFornecedores();
         System.out.print("Digite o ID do fornecedor: ");
         int idFornecedor = lerOpcao();
-        Optional<Fornecedor> fornecedorOpt = fornecedores.stream().filter(f -> f.getIdFornecedor() == idFornecedor).findFirst();
-        if(fornecedorOpt.isEmpty()){
+        Fornecedor fornecedor = encontrarFornecedorPorId(idFornecedor);
+        
+        if(fornecedor == null){
             System.out.println("Fornecedor não encontrado. Operação cancelada.");
             return;
         }
 
-        produtoOpt.get().getEstoque().adicionar(qtd);
-        EntradaEstoque novaEntrada = new EntradaEstoque(produtoOpt.get(), fornecedorOpt.get(), estoquista, qtd);
+        produto.getEstoque().adicionar(qtd);
+        EntradaEstoque novaEntrada = new EntradaEstoque(produto, fornecedor, estoquista, qtd);
         entradasEstoque.add(novaEntrada);
 
         System.out.println("Entrada de estoque registrada e quantidade atualizada com sucesso!");
@@ -302,12 +343,13 @@ public class SistemaTechAMV {
         consultarEstoque();
         System.out.print("Digite o ID do produto para ajustar: ");
         int id = lerOpcao();
-        Optional<Produto> produtoOpt = produtos.stream().filter(p -> p.getIdProduto() == id).findFirst();
-        if (produtoOpt.isEmpty()) {
+        Produto p = encontrarProdutoPorId(id);
+
+        if (p == null) {
             System.out.println("Produto não encontrado.");
             return;
         }
-        Produto p = produtoOpt.get();
+        
         System.out.printf("Estoque atual de %s: %d\n", p.getNome(), p.getEstoque().getQuantidade());
         System.out.print("Digite a nova quantidade correta: ");
         int qtd = lerOpcao();
@@ -321,7 +363,9 @@ public class SistemaTechAMV {
 
     private static void listarUsuarios() {
         System.out.println("\n--- USUÁRIOS DO SISTEMA ---");
-        usuarios.forEach(u -> System.out.printf("ID %d | %s | %s | %s | Status: %s\n", u.getIdUsuario(), u.getTipo(), u.getNome(), u.getEmail(), u.isAtivo() ? "Ativo" : "Inativo"));
+        for (Usuario u : usuarios) {
+            System.out.printf("ID %d | %s | %s | %s | Status: %s\n", u.getIdUsuario(), u.getTipo(), u.getNome(), u.getEmail(), u.isAtivo() ? "Ativo" : "Inativo");
+        }
     }
 
     private static void criarUsuario() {
@@ -352,22 +396,23 @@ public class SistemaTechAMV {
         listarUsuarios();
         System.out.print("Digite o ID do usuário para editar: ");
         int id = lerOpcao();
-        Optional<Usuario> uOpt = usuarios.stream().filter(u -> u.getIdUsuario() == id).findFirst();
-        if (uOpt.isEmpty()) {
+        Usuario usuario = encontrarUsuarioPorId(id);
+
+        if (usuario == null) {
             System.out.println("ID não encontrado.");
             return;
         }
-        Usuario usuario = uOpt.get();
+        
         System.out.printf("Editando usuário: %s\n", usuario.getNome());
         System.out.printf("Nome atual: %s. Novo nome (ou enter para manter): ", usuario.getNome());
         String novoNome = scanner.nextLine();
-        if (!novoNome.isBlank()) {
+        if (novoNome != null && !novoNome.trim().isEmpty()) {
             usuario.setNome(novoNome);
         }
 
         System.out.printf("Email atual: %s. Novo email (ou enter para manter): ", usuario.getEmail());
         String novoEmail = scanner.nextLine();
-        if (!novoEmail.isBlank()) {
+        if (novoEmail != null && !novoEmail.trim().isEmpty()) {
             usuario.setEmail(novoEmail);
         }
         System.out.println("Usuário atualizado com sucesso!");
@@ -378,9 +423,10 @@ public class SistemaTechAMV {
         listarUsuarios();
         System.out.print("Digite o ID do usuário para desativar: ");
         int id = lerOpcao();
-        Optional<Usuario> uOpt = usuarios.stream().filter(u -> u.getIdUsuario() == id).findFirst();
-        if (uOpt.isPresent()) {
-            uOpt.get().setAtivo(false);
+        Usuario usuario = encontrarUsuarioPorId(id);
+        
+        if (usuario != null) {
+            usuario.setAtivo(false);
             System.out.println("Usuário desativado.");
         } else {
             System.out.println("ID não encontrado.");
@@ -403,7 +449,9 @@ public class SistemaTechAMV {
             System.out.println("Nenhum cliente cadastrado.");
             return;
         }
-        clientes.forEach(c -> System.out.printf("ID %d | Nome: %s | CPF: %s\n", c.getIdCliente(), c.getNome(), c.getCpf()));
+        for (Cliente c : clientes) {
+            System.out.printf("ID %d | Nome: %s | CPF: %s\n", c.getIdCliente(), c.getNome(), c.getCpf());
+        }
     }
 
     private static void cadastrarFornecedor() {
@@ -422,23 +470,35 @@ public class SistemaTechAMV {
             System.out.println("Nenhum fornecedor cadastrado.");
             return;
         }
-        fornecedores.forEach(f -> System.out.printf("ID %d | Nome: %s | CNPJ: %s\n", f.getIdFornecedor(), f.getNome(), f.getCnpj()));
+        for (Fornecedor f : fornecedores) {
+            System.out.printf("ID %d | Nome: %s | CNPJ: %s\n", f.getIdFornecedor(), f.getNome(), f.getCnpj());
+        }
     }
 
     private static void gerarRelatorioDesempenhoVendedor(Vendedor vendedor) {
         System.out.println("\n--- DESEMPENHO DE VENDAS (HOJE) ---");
-        double total = vendas.stream()
-                .filter(v -> v.getVendedor().equals(vendedor) && v.getData().toLocalDate().equals(LocalDate.now()))
-                .mapToDouble(Venda::getValorTotal)
-                .sum();
+        double total = 0.0;
+        for(Venda v : vendas) {
+            if (v.getVendedor().equals(vendedor) && v.getData().toLocalDate().equals(LocalDate.now())) {
+                total += v.getValorTotal();
+            }
+        }
         System.out.printf("Total vendido por %s hoje: R$ %.2f\n", vendedor.getNome(), total);
     }
 
     private static void verificarAlertasEstoqueBaixo() {
-        List<Produto> baixos = produtos.stream().filter(p -> p.getEstoque().getQuantidade() <= p.getEstoqueMinimo()).toList();
-        if (!baixos.isEmpty()) {
+        List<Produto> produtosComEstoqueBaixo = new ArrayList<>();
+        for (Produto p : produtos) {
+            if (p.getEstoque().getQuantidade() <= p.getEstoqueMinimo()) {
+                produtosComEstoqueBaixo.add(p);
+            }
+        }
+        
+        if (!produtosComEstoqueBaixo.isEmpty()) {
             System.out.println("\nALERTA: PRODUTOS COM ESTOQUE BAIXO!");
-            baixos.forEach(p -> System.out.printf("- %s | Atual: %d | Mínimo: %d\n", p.getNome(), p.getEstoque().getQuantidade(), p.getEstoqueMinimo()));
+            for(Produto p : produtosComEstoqueBaixo) {
+                System.out.printf("- %s | Atual: %d | Mínimo: %d\n", p.getNome(), p.getEstoque().getQuantidade(), p.getEstoqueMinimo());
+            }
         }
     }
 
@@ -448,13 +508,19 @@ public class SistemaTechAMV {
             System.out.println("Nenhuma venda registrada.");
             return;
         }
-        vendas.forEach(v -> {
+        for (Venda v : vendas) {
             System.out.println("---------------------------------");
-            String nomeCliente = (v.getCliente() != null) ? v.getCliente().getNome() : "Não informado";
+            String nomeCliente = "Não informado";
+            if (v.getCliente() != null) {
+                nomeCliente = v.getCliente().getNome();
+            }
             System.out.printf("Venda #%d | Data: %s | Vendedor: %s | Cliente: %s\n", v.getIdVenda(), v.getData().format(formatadorData), v.getVendedor().getNome(), nomeCliente);
-            v.getItens().forEach(item -> System.out.printf("  -> %s (%d un): R$ %.2f\n", item.getProduto().getNome(), item.getQuantidade(), item.getSubtotal()));
+            
+            for (ItemVenda item : v.getItens()) {
+                System.out.printf("  -> %s (%d un): R$ %.2f\n", item.getProduto().getNome(), item.getQuantidade(), item.getSubtotal());
+            }
             System.out.printf("Total da Venda: R$ %.2f\n", v.getValorTotal());
-        });
+        }
     }
 
     private static void gerarRelatorioProdutosMaisVendidos() {
@@ -463,13 +529,40 @@ public class SistemaTechAMV {
             System.out.println("Nenhuma venda registrada.");
             return;
         }
-        Map<String, Integer> contagem = vendas.stream()
-                .flatMap(v -> v.getItens().stream())
-                .collect(Collectors.groupingBy(item -> item.getProduto().getNome(), Collectors.summingInt(ItemVenda::getQuantidade)));
+        
+        // Etapa 1: Contar as vendas de cada produto usando um Mapa
+        Map<String, Integer> contagem = new HashMap<>();
+        for (Venda v : vendas) {
+            for (ItemVenda item : v.getItens()) {
+                String nomeProduto = item.getProduto().getNome();
+                int quantidadeAtual = 0;
+                if (contagem.containsKey(nomeProduto)) {
+                    quantidadeAtual = contagem.get(nomeProduto);
+                }
+                contagem.put(nomeProduto, quantidadeAtual + item.getQuantidade());
+            }
+        }
+        
+        // Etapa 2: Encontrar o mais vendido, imprimir, remover e repetir
+        while (!contagem.isEmpty()) {
+            String produtoMaisVendido = null;
+            int maxUnidades = -1;
 
-        contagem.entrySet().stream()
-                .sorted(Map.Entry.<String, Integer>comparingByValue().reversed())
-                .forEach(entry -> System.out.printf("- %s | Unidades Vendidas: %d\n", entry.getKey(), entry.getValue()));
+            // Encontra o produto com mais unidades vendidas no mapa
+            for (String nomeProduto : contagem.keySet()) {
+                int unidades = contagem.get(nomeProduto);
+                if (unidades > maxUnidades) {
+                    maxUnidades = unidades;
+                    produtoMaisVendido = nomeProduto;
+                }
+            }
+            
+            // Imprime o resultado encontrado e o remove para a próxima iteração
+            if (produtoMaisVendido != null) {
+                System.out.printf("- %s | Unidades Vendidas: %d\n", produtoMaisVendido, maxUnidades);
+                contagem.remove(produtoMaisVendido);
+            }
+        }
     }
 
     private static void gerarRelatorioEntradasEstoque() {
@@ -478,12 +571,12 @@ public class SistemaTechAMV {
             System.out.println("Nenhuma entrada registrada.");
             return;
         }
-        entradasEstoque.forEach(e -> {
+        for (EntradaEstoque e : entradasEstoque) {
             System.out.println("---------------------------------");
             System.out.printf("Entrada #%d | Data: %s\n", e.getIdEntrada(), e.getData().format(formatadorData));
             System.out.printf("Produto: %s | Qtd: %d\n", e.getProduto().getNome(), e.getQuantidade());
             System.out.printf("Fornecedor: %s | Responsável: %s\n", e.getFornecedor().getNome(), e.getEstoquista().getNome());
-        });
+        }
     }
 
     private static int lerOpcao() {
@@ -492,5 +585,26 @@ public class SistemaTechAMV {
         } catch (NumberFormatException e) {
             return -1;
         }
+    }
+
+    private static void inicializarDados() {
+        Categoria catSmart = new Categoria("Smartphones");
+        Categoria catNote = new Categoria("Notebooks");
+        Categoria catAcc = new Categoria("Acessórios");
+
+        produtos.add(new Produto(1, "Galaxy S25", 7999.90, catSmart, 10, 20));
+        produtos.add(new Produto(2, "Phone 16", 8500.50, catSmart, 10, 15));
+        produtos.add(new Produto(3, "Dell G15", 5500.00, catNote, 5, 8));
+        produtos.add(new Produto(4, "Mouse sem fio", 150.00, catAcc, 20, 50));
+
+        usuarios.add(new Gerente("Arthur Ramiro", "g", "1"));
+        usuarios.add(new Vendedor("Melissa Emely", "v", "1"));
+        usuarios.add(new Estoquista("Vitória de Souza", "e", "1"));
+
+        clientes.add(new Cliente("João da Silva", "111.222.333-44"));
+        clientes.add(new Cliente("Maria Oliveira", "555.666.777-88"));
+
+        fornecedores.add(new Fornecedor("Eletrônicos Brasil S/A", "12.345.678/0001-99"));
+        fornecedores.add(new Fornecedor("Importados Tech Ltda", "98.765.432/0001-11"));
     }
 }
